src/objects/Referral_View__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <label>Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funder_Name__c</fullName>
        <label>Funder Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_Id__c</fullName>
        <label>Referral Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Chose Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Decompensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Family Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Clinical Decision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Referral View</label>
    <nameField>
        <label>Referral View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>